# meet-and-greet

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.toml  master_state.json  pyproject.toml  pytest.ini  targets.json
.github/workflows/: release.yml
cmake/: mingw-w64-toolchain.cmake  toolchain-linux-x86_64.cmake  toolchain-windows-arm64.cmake  toolchain-windows-x86_64.cmake
docs/: testing.md
docs/design/: README.md
include/client/: data.h  log.h  network.h  tui.h
scripts/: genkey.sh  setup-cross.sh
src/client/: main.cpp
src/client/net/: http.cpp  udp.cpp
src/client/tui/: master.cpp  screens.cpp
src/server/: __main__.py
src/server/app/: __init__.py  admin.py  app.py  config.py  routes.py
src/server/cli/: __init__.py  admin.py
src/server/crypto/: __init__.py  cipher.py
src/server/data/: __init__.py  passphrases.py  questions.py
src/server/db/: __init__.py  models.py  store.py
src/server/discovery/: __init__.py  udp.py
src/server/graph/: __init__.py  targets.py
src/server/logging/: __init__.py  logger.py  logger.toml
tests/: conftest.py
tests/client/: CMakeLists.txt  test_data.cpp  test_network.cpp
tests/server/: conftest.py  test_admin.py  test_cipher.py  test_config.py  test_data.py  test_graph.py  test_models.py  test_routes.py  test_store.py  test_system.py
tests/system/: conftest.py  harness.py  test_binary.py  test_scale.py
