[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meet-and-greet-server"
version = "1.0.0"
description = "MAG classroom icebreaker server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
mag = "server.__main__:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"server.logging" = ["*.toml"]
